js/js.translator/testData/incremental/invalidation/mainFunctionSelectSamePackageMixedShape/main/first.1.kt
package p

private fun main() {
    value.ok += "P2"
}
